# mod_magick

./: AUTHORS  ChangeLog  Makefile.am  README  README.md  config.h.in  configure.ac  mod_magick.c  mod_magick.h  mod_magick.spec.in  mod_magick_colorspace.c  mod_magick_format.c  mod_magick_interlace.c  mod_magick_quality.c  mod_magick_resize.c  mod_magick_strip.c
